[package]
name = "PB2Launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", version = "0.13.0-dev", features = [
    "tokio",
    "lazy",
    "advanced",
    "image",
] }
once_cell = "1.19.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper = "0.19.0"
regex = "1.10.5"
md5 = "0.7.0"
flate2 = "1.0.30"
tokio = "1.38.0"
rfd = "0.14.1"
open = "5.2.0"
serde_json = "1.0.120"
serde = { version = "1.0.203", features = ["derive"] }
cfg-if = "1.0.0"

[profile.release]
lto = true
opt-level = 'z' # or 's' for slightly less aggressive optimization